--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,8 +14,8 @@
   weight = 20
 
 [[main]]
-  name = "Experience"
-  url = "#experience"
+  name = "Talks"
+  url = "#talks"
   weight = 30
 
 [[main]]
