--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,13 +14,13 @@
   weight = 20
 
 [[main]]
-  name = "Talks"
-  url = "#talks"
+  name = "Experience"
+  url = "#experience"
   weight = 30
 
 [[main]]
-  name = "Publications"
-  url = "#featured"
+  name = "Talks"
+  url = "#talk"
   weight = 40
 
 [[main]]
